[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wind-mcp"
version = "1.0.0"
description = "MCP server for Wind Financial Terminal (万得)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Frank Sun", email = "qmqsun@gmail.com"},
]
keywords = ["mcp", "wind", "windpy", "financial", "terminal", "ai", "llm", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/QmQsun/Wind-MCP"
Repository = "https://github.com/QmQsun/Wind-MCP"
Issues = "https://github.com/QmQsun/Wind-MCP/issues"

dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    # WindPy is installed with Wind Terminal, not from PyPI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
wind-mcp = "wind_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
